--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
  <h1>WELCOME to </h1>
- <h1><span class="name-highlight">ATIKA's </span>WORLD</h1>   
+ <h1><span class="name-highlight">ATIKA's </span>WORLD</h1> 
+ <h3>World class professional Web Developer</h3>
+ <p>I create responsive websites that actracts clients and much more . professional in css and html . looking forward to expertise my work in future and more . Thank You.</p>  
 </body>
 </html>
