--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h1>WELCOME to </h1>
- <h1><span class="name-highlight">ATIKA's </span>WORLD</h1> 
- <h3>World class professional Web Developer</h3>
- <p>I create responsive websites that actracts clients and much more . professional in css and html . looking forward to expertise my work in future and more . Thank You.</p>  
+<section>
+    <div>
+        <h1>WELCOME to </h1>
+        <h1><span class="name-highlight">ATIKA's </span>WORLD</h1> 
+        <h3>World class professional Web Developer</h3>
+        <p>I create responsive websites that actracts clients and much more . professional in css and html . looking forward to expertise my work in future and more .Also I am eagerly waiting for my first work experience.I consider as a very disciplined and well mannered person . I am very concious about time management and sincere to my work. Thank You.</p>  
+    </div>
+    <div>
+        <img src="atika-personal/pictures/photos/fixed2.jpg" alt="">
+
+    </div>
+</section>
 </body>
 </html>
