--- a/index.html
+++ b/index.html
@@ -10,17 +10,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section>
-    <div>
+<section class="top-banner">
+    <div class="half-width">
         <h1>WELCOME to </h1>
         <h1><span class="name-highlight">ATIKA's </span>WORLD</h1> 
         <h3>World class professional Web Developer</h3>
         <p>I create responsive websites that actracts clients and much more . professional in css and html . looking forward to expertise my work in future and more .Also I am eagerly waiting for my first work experience.I consider as a very disciplined and well mannered person . I am very concious about time management and sincere to my work. Thank You.</p>  
+        <a class="first-button" target="_blank" href="https://www.facebook.com/atika.noushad.73/">CONTACT ME </a>
     </div>
-    <div>
-        <img src="atika-personal/pictures/photos/fixed2.jpg" alt="">
-
+    <div class="half-width">
+<img src="images/fixed2.jpg" alt="">
     </div>
 </section>
+<section class="second-banner">
+<div class="half-width">
+    <img src="images/fixed1.jpg" alt="">
+</div>
+<div class="half-width">
+    <h2>Dream Big </h2>
+    <h4>Become worlds no.1 web developer</h4>
+    <p>I already learnt css and html . html and css seems very interesting to me. these are very easy programming languages.I feel amazed whenever i think how the hell the codes work.. its a matter of great wonder to me .. coding always seems very fascinatibg to me .. it was my dream to learn coding .and now i m following my dreams . you should also follow your dreams.</p>
+    <a class="second-button" target="_blank" href="file:///C:/CV/CV.pdf">DOWNLOAD CV</a>
+</div>
+</section>
+<section class="experience-area">
+<h1>EXPERIENCES</h1>
+    <div id="full-stack" class="half-width single-experience">
+    <H2>Full Stack Web Developer</H2>
+    <h3 class="name-highlight">from 2024-present | Pro Level Developer</h3>
+    <p>currently i am learing full stack web developing from programming hero course . i am loving their course . they are teaching me everything from a to z. Currently I know everything needed to make a beautiful website or your personal or proffesional portfolio. I will give you 100% solution. Thank You.</p>
+</div>
+<div id="baby-web" class="half-width single-experience">
+    <h2>Baby Web Developer </h2>
+    <h3 class="name-highlight">From 2024-infinity | Programming Hero Learner</h3>
+    <p>Currently I learnt css and html with programming hero. it was fun doing that. Now i know how to make a website for personal use.i m looking forward to become a web developer working from home.</p>
+</div>
+</section>
+<footer> 
+    <p>all rights reserved</p>
+</footer>
 </body>
 </html>
